--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,8 +40,10 @@ jobs:
       - name: Build web
         run: flutter build web --release --base-href "/gmgn_app/"
 
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
+          - name: Setup Pages
+      uses: actions/configure-pages@v4
+      with:
+        enablement: true
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
