--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,12 @@ jobs:
         run: flutter config --enable-web
 
       - name: Build web
-        run: flutter build web --release --base-href "/gmgn_app/"
+        run: |
+          flutter build web \
+            --release \
+            --base-href "/gmgn_app/" \
+            --web-renderer canvaskit \
+            --dart-define=FLUTTER_WEB_USE_SKIA=true
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
